--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/geekcoldhand/Todays-Tech-Talk/issues"
   },
-  "homepage": "https://github.com/geekcoldhand/Todays-Tech-Talk#readme"
+  "homepage": "https://github.com/geekcoldhand/Todays-Tech-Talk#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.22.5"
+  }
 }
