--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "seeds/seed.js"
+    "seed": "seeds/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,6 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.5",
-    "server.js": "^1.0.0"
+    "sequelize": "^6.3.5"
   }
 }
