--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "seed": "seeds/index.js"
+    "seed": "node seeds/index.js"
   },
   "repository": {
     "type": "git",
